# Eastrn-backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/apis/: api_router.py  keyword.py  navigation.py  tooltip.py
app/apis/keyword/: endpoint.py  service.py
app/apis/navigation/: endpoint.py  service.py
app/apis/summary/: endpoint.py  schema.py  service.py
app/apis/tooltip/: endpoint.py  service.py
app/apis/vis_summary/: endpoint.py  schema.py  service.py
app/core/: config.py  logger.py
app/services/: keyword_service.py  navigation_service.py  tooltip_service.py
