[tool.poetry]
name = "eastrn-backend"
version = "0.1.0"
description = "read helper proto"
authors = ["sondonghup <sondonghup@naver.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
